<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/amarelo_FCE300">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelFeedback"
        android:background="@color/preto_000000"
        android:textColor="@color/branco_ffffff"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:paddingLeft="@dimen/tp_activity_horizontal_margin"
        android:paddingRight="@dimen/tp_activity_horizontal_margin"
        android:paddingTop="@dimen/tp_activity_vertical_margin"
        android:paddingBottom="@dimen/tp_activity_vertical_margin"
        android:id="@+id/textViewFeedBack" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/preto_000000"
                android:textSize="15dp"
                android:paddingLeft="@dimen/textView_margem"
                android:paddingTop="@dimen/textView_margem"
                android:textStyle="bold"
                android:text="@string/labelEmail"
                android:id="@+id/textViewEmail" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco_ffffff"
                android:text="@string/emailParaEnvio"
                android:ems="11"
                android:focusable="false"
                android:maxLength="50"
                android:background="@drawable/customizado_edittext"
                android:layout_margin="@dimen/tc_margem"
                android:id="@+id/editTextComplemento"
                android:enabled="false"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/preto_000000"
                android:textSize="15dp"
                android:paddingLeft="@dimen/textView_margem"
                android:paddingTop="@dimen/textView_margem"
                android:textStyle="bold"
                android:text="@string/labelConteudo"
                android:id="@+id/textViewConteudo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/branco_ffffff"
                android:textColorHint="@color/cinza_E0E0E0"
                android:gravity="left"
                android:ems="11"
                android:background="@drawable/customizado_edittext"
                android:layout_margin="@dimen/tc_margem"
                android:id="@+id/editTextConteudo"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textIsSelectable="false"
                android:enabled="true"
                android:maxHeight="0dp"
                android:maxLines="27"
                android:maxLength="1500"
                android:scrollbars = "vertical"
                android:autoText="false"
                android:selectAllOnFocus="true" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/customizado_button_preto"
                android:gravity="center"
                android:text="@string/btCancelar"
                android:id="@+id/buttonCancelar"
                android:textColor="@color/branco_ffffff"
                android:layout_marginBottom="80dp"
                android:layout_margin="@dimen/tc_margem"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignEnd="@+id/editText2" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/customizado_button_preto"
                android:gravity="center"
                android:text="@string/btEnviar"
                android:id="@+id/buttonEnviar"
                android:textColor="@color/branco_ffffff"
                android:layout_marginBottom="80dp"
                android:layout_margin="@dimen/tc_margem"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignEnd="@+id/editText2" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
